@@ -51,4 +51,4 @@ Super Smash Bros. Brawl © 2008 Nintendo and HAL Laboratory")]
 // by using the '*' as shown below:
 // [assembly: AssemblyVersion("1.0.*")]
 [assembly: AssemblyVersion("0.26.*")]
-[assembly: AssemblyFileVersion("0.26.0.0")]
+[assembly: AssemblyFileVersion("0.26.1.0")]
