@@ -1,5 +1,5 @@
 ﻿
-BrawlCrate - v0.26
+BrawlCrate - v0.26 Hotfix 1
 Copyright © 2018 - 2019 soopercool101, MarioDox, Syvkal
 BrawlBox  © 2009 - 2019 Bryan Moulton, BlackJax96, libertyernie & Sammi Husky
 
@@ -15,6 +15,10 @@ they be held accountable for the manner in which it is used.
  ===============================================
 |************ BrawlCrate Change Log ************|
  ===============================================
+ 
+ - BrawlCrate v0.26 Hotfix 1 - (5/16/2019)
+ . Fix issue where shaders could not be properly selected
+ . Property grid no longer expands all items by default
  
  - BrawlCrate v0.26 - (5/16/2019)
  . Metal material generation should completely match Brawl
